--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -74,3 +74,7 @@
       @apply bg-background text-foreground;
     }
   }
+
+  .temperature {
+    background-image: linear-gradient(to right, #00dfff 0%, #00f9ff 20%, yellow)
+  }
